# vaulter

./: .gitignore  Cargo.toml  README.md  build.rs  install-remote.sh  install.sh
.github/workflows/: ci.yml  release.yml
.sqlx/: query-01105437f1f78fe20ce704912db2408a8a1187cc56ccbb4977fb44deda5b6d18.json  query-0c4195c2245c840c03f0b91d420775abc0b27024972711c262e102528774e08e.json  query-0d751a9e30a6f85ea823372a966cd20688cad921b7c83e7ba5e866c722fe2bf1.json  query-19876a959d65009c634153d9066f75fae68592fc34ec2ab81b78ffba5eb58d20.json  query-31291310454edbe5a05729e665e8c8b88bcd1af3f6e755cf85a03e5c4c2ef10e.json  query-3a1b97b156dea9df417d33076fd139bb6f0434dd6bb53a69bed28105fad94afd.json  query-402a7522149f8fb683fbefb8ceeb65678f801350f8047a2c6f89f1ed86a67064.json  query-7e2909b5303f17b66f82bc5d1026c22c7de95f5c287012d9f166501429944b50.json  query-d8db62b8bb3d1d9f165f7d98b961838950b27b42829f6aaef2915e82555aefed.json  query-e6ae0425885e4314b826df0fe9c849d8740a734af4f0b1343591a588b8650292.json  query-f99d5a45a325dcf61990af8ca203d0adafb4ffb89dc99aed8fa5a6281f768729.json
completions/: vaulter.zsh
examples/: show_env.py
migrations/: 001_init.sql
src/: cli.rs  commands.rs  db.rs  errors.rs  lib.rs  main.rs  models.rs
tests/: test_db.rs
